# poetry-docker-env

./: Dockerfile  README.md
working/: pyproject.toml  sample.py
